PROJECT (FlowdockAPI)

cmake_minimum_required(VERSION 2.6)

# This is in case we ever need to know if we were creating a VS or Xcode project
IF(CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(GENERATING_IDE_MAKEFILE 1)
ELSEIF(CMAKE_GENERATOR MATCHES "Xcode")
  SET(GENERATING_IDE_MAKEFILE 1)
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 8")

IF(WIN32)
  ADD_DEFINITIONS( -D "_UNICODE")
  SET( CMAKE_MFC_FLAG 0 )
ENDIF(WIN32)

ADD_DEFINITIONS(-DCURL_STATICLIB)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.cpp)

SOURCE_GROUP(Source FILES ${SOURCE_FILES})
SOURCE_GROUP(Headers FILES ${HEADERS})

ADD_LIBRARY(FlowdockAPI SHARED ${SOURCE_FILES} ${HEADERS})
#TARGET_COMPILE_DEFINITIONS(FlowdockAPI PRIVATE USE_PTHREADS)

IF(WIN32)
   SET( OSSPECIFIC_LIBRARIES ws2_32.lib winmm.lib wldap32.lib libcurl )
ELSEIF(UNIX)
   SET( OSSPECIFIC_LIBRARIES pthread curl )
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(FlowdockAPI JSONLib ${OSSPECIFIC_LIBRARIES})
INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )
INCLUDE_DIRECTORIES(FlowdockAPI .. ../curl-7.57.0/include ../JSONLib/JSONLib )

IF(WIN32)
   SET_TARGET_PROPERTIES(FlowdockAPI PROPERTIES COMPILE_FLAGS /Zc:wchar_t-)
ENDIF(WIN32)
